force-app/main/default/objects/Log_Event__e/fields/Immediate_Platform_Event_Publish_Limit__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Platform_Event_Publish_Limit__c</fullName>
    <label>Immediate Platform Event Publish Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>