force-app/main/default/objects/Log_Event__e/fields/Num_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Num_Callouts__c</fullName>
    <label>Num Callouts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>