force-app/main/default/objects/Log_Event__e/fields/Num_DML_Statements__c.field-meta.xml
<CustomField>
    <fullName>Num_DML_Statements__c</fullName>
    <label>Num DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>