force-app/main/default/objects/Log_Event__e/fields/Num_Email_Invocations__c.field-meta.xml
<CustomField>
    <fullName>Num_Email_Invocations__c</fullName>
    <label>Num Email Invocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>