force-app/main/default/objects/Log_Event__e/fields/Num_Future_Calls__c.field-meta.xml
<CustomField>
    <fullName>Num_Future_Calls__c</fullName>
    <label>Num Future Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>