force-app/main/default/objects/Log_Event__e/fields/Num_Immediate_Platform_Event_Publish__c.field-meta.xml
<CustomField>
    <fullName>Num_Immediate_Platform_Event_Publish__c</fullName>
    <label>Num Immediate Platform Event Publish</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>