force-app/main/default/objects/Log_Event__e/fields/Num_Push_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Num_Push_Notifications__c</fullName>
    <label>Num Push Notifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>