force-app/main/default/objects/Log_Event__e/fields/Num_QueryLocator_Rows__c.field-meta.xml
<CustomField>
    <fullName>Num_QueryLocator_Rows__c</fullName>
    <label>Num QueryLocator Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>