force-app/main/default/objects/Log_Event__e/fields/Num_Queueable_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Num_Queueable_Jobs__c</fullName>
    <label>Num Queueable Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>