force-app/main/default/objects/Log_Event__e/fields/Num_SOQL_Queries__c.field-meta.xml
<CustomField>
    <fullName>Num_SOQL_Queries__c</fullName>
    <label>Num SOQL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>