force-app/main/default/objects/Log_Event__e/fields/Num_SOSL_Queries__c.field-meta.xml
<CustomField>
    <fullName>Num_SOSL_Queries__c</fullName>
    <label>Num SOSL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>