force-app/main/default/objects/Log_Event__e/fields/Push_Notifications_Limit__c.field-meta.xml
<CustomField>
    <fullName>Push_Notifications_Limit__c</fullName>
    <label>Push Notifications Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>