force-app/main/default/objects/Log_Event__e/fields/QueryLocator_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>QueryLocator_Row_Limit__c</fullName>
    <label>QueryLocator Row Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>