force-app/main/default/objects/Log_Event__e/fields/Queueable_Job_Limit__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Job_Limit__c</fullName>
    <label>Queueable Job Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>