force-app/main/default/objects/Log_Event__e/fields/SOQL_Query_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query_Row_Limit__c</fullName>
    <label>SOQL Query Row Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>