force-app/main/default/objects/Log_Event__e/fields/SOSL_Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>SOSL_Query_Limit__c</fullName>
    <label>SOSL Query Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>